# fictional_disco

./: .gitignore  CMakeLists.txt  Cargo.toml  GNUmakefile  README.md  README.rst  common.h  libpanos.h  panos.cpp  pig.h
Tpf/: CMakeLists.txt
Tpf/src/: Tpf.cpp  Tpf.h
Tpf/src/Tpf/: Append.h  Id.cpp  Id.h  Prepend.cpp  Prepend.h  Tuplify.h  def.cpp  def.h  return_.cpp  return_.h  tpf.cpp  tpf.h
Tpf/test/: test.h  test_def.cpp
Tpf/test/fixture/: tpfs.cpp  tpfs.h
_00_src/: incubate.cpp  incubate.h  panos.cpp
_00_src/smaragd/: tpf.cpp  tpf.h
_00_src/smaragd/ast/token/: Token.h  type.h
_00_src/smaragd/tpf/: bind.h
_01_src/: main.rs
_01_src/tpf/: tpf.cpp
_archive/: _001_CMakeLists.txt  links.txt
_archive/002_tpf/: Tpf.cpp  Tpf.h
_archive/002_tpf/Tpf/: Append.h  Tuplify.cpp  def.h  return_.h  tpf.cpp
_archive/_00_src/: panos.sm  scafold_tokens.cpp  scafold_tokens.h
_archive/_00_src/smaragd/: Ghost.h
_archive/_00_src/smaragd/tpf/: bind.cpp
_archive/_01_src/tpf/: __module.cpp
dev/: sms
doc/: Makefile  conf.py  index.rst  make.bat
doc/source/: cmake.rst  conf.py  index.rst
lib/sms/: LICENSE  shard.yml
lib/sms/spec/: sms_spec.cr
lib/sms/src/: actions.cr  cli.cr  cmake.cr  component_details.cr  component_header_details.cr  component_source_details.cr  conf_dir_storage.cr  conf_dir_views.cr  file_views.cr  impls.cr  line_adder.cr  logger.cr  logging.cr  main.cr  mod_main_details.cr  mod_main_header_details.cr  mod_main_source_details.cr  sagas.cr  sms.cr  source.cr  source_details.cr
lib/sms/src/actions/: generate_cmake.cr  generate_header_files.cr  generate_source_files.cr
sms/: README.md  build_root.txt
sms/skeletor/CMakeLists.txt/: header.txt
sms/spec/: spec_helper.cr
sms/src/: sms.cr
sms/structure/mods/: Tpf.txt  list.txt
sms/structure/mods/Tpf/comps/: list.txt
sms/structure/mods/Tpf/comps/Append/: include_public.txt
sms/structure/mods/Tpf/comps/return_/: include_public.txt
sms/structure/mods/Tpf/comps/tpf/: include_system_public.txt
src/: Tpf.cpp  Tpf.h  lr1.cpp  lr1.h  main.cpp  panos.cpp  panos.sm  sacl.cpp  sacl.h  scafold_tokens.h  ser.cpp  ser.h  smaragd.cpp  smaragd.h  test_ser.cpp  tpf.cpp  tpf.h  typelite.cpp  typelite.h
src/Tpf/: Append.cpp  Append.h  Id.cpp  Id.h  Prepend.cpp  Prepend.h  Tuplify.cpp  Tuplify.h  def.cpp  def.h  return_.cpp  return_.h  tpf.cpp  tpf.h
src/smaragd/ast/token/: Token.h  type.h
src/sms/: args.cpp  args.h  args.hpp  sms.cpp
src/tpf/: example.cpp  example.h  lib.cpp  lib.h  map.cpp  map.h  set.cpp  set.h  tpf.h
src/typelite/: Ghost.cpp  Ghost.h  Tagged.h  tag.cpp  tag.h
test/: Tpf.cpp  Tpf.h  main.cpp  test.h  test_tpf.cpp  test_tpf.h  test_tpf_lib.cpp  test_tpf_lib.h
test/Tpf/: test_def.cpp  test_def.h
test/test/: context.cpp  context.h
test/tpf/: test_tpf.cpp  test_tpf.h
tpf/: CMakeLists.txt  GNUmakefile  apply.h  bind.cpp  bind.h  cons.cpp  cons.h  find.cpp  find.h  select.cpp  select.h  templ.cpp  templ.h  to_bool.h  tupletools.h
tpf/test/: main.cpp  test.cpp  test.h  test_def.cpp  test_def.h
